--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Pablo Torres - Portafolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Pablo Torres 2</h1>
+  <h1>Pablo Torres</h1>
   <p>Software Engineer</p>
   <ul>
-    <li>Projects</li>
-    <li>Studies</li>
-    <li>About me</li>
-    <li><a href="mailto:pablotorres11001@gmail.com">Contact</a></li>
+    <li><span class="seccion">Projects</span></li>
+    <li><span class="seccion">Studies</span></li>
+    <li><span class="seccion">About me</span></li>
+    <li><a href="mailto:pablotorres11001@gmail.com"><span class="seccion">Contact</span></a></li>
   </ul>
 </body>
 </html>
