--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pablo Torres - Portafolio</title>
+  <title>Pablo Torres - Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script defer src="main.js"></script>
 </head>
 <body>
-  <h1>Pablo Torres</h1>
-  <p>Software Engineer</p>
-  <ul>
-    <li><span class="seccion">Projects</span></li>
-    <li><span class="seccion">Studies</span></li>
-    <li><span class="seccion">About me</span></li>
-    <li><a href="mailto:pablotorres11001@gmail.com"><span class="seccion">Contact</span></a></li>
-  </ul>
+
+  <section class="hero">
+    <h1 id="name"></h1>
+    <p id="role"></p>
+
+
+    <ul class="button-bar">
+      <li><button id="section1" class="seccion"></button></li>
+      <li><button id="section2" class="seccion"></button></li>
+      <li><button id="section3" class="seccion"></button></li>
+      <li><a href="mailto:pablotorres11001@gmail.com"><button class="seccion" id="section4"></button></a></li>
+    </ul>
+  </section>
+
 </body>
 </html>
