--- a/index.html
+++ b/index.html
@@ -9,17 +9,32 @@
 </head>
 <body>
 
+  <!-- HERO -->
   <section class="hero">
     <h1 id="name"></h1>
     <p id="role"></p>
-
-
     <ul class="button-bar">
       <li><button id="section1" class="seccion"></button></li>
       <li><button id="section2" class="seccion"></button></li>
       <li><button id="section3" class="seccion"></button></li>
       <li><a href="mailto:pablotorres11001@gmail.com"><button class="seccion" id="section4"></button></a></li>
     </ul>
+  </section>
+  
+  <!-- PROJECTs -->
+  <section class="projects">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <a href="project1.html" class="project-card">
+        <img src="img/project1.png" alt="Project 1">
+        <h3>Project Title 1</h3>
+      </a>
+      <a href="project2.html" class="project-card">
+        <img src="img/project2.png" alt="Project 2">
+        <h3>Project Title 2</h3>
+      </a>
+      <!-- Agrega más proyectos igual -->
+    </div>
   </section>
 
 </body>
