--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@
   </section>
   
   <!-- PROJECTs -->
-  <section class="projects">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <a href="project1.html" class="project-card">
-        <img src="img/project1.png" alt="Project 1">
-        <h3>Project Title 1</h3>
-      </a>
-      <a href="project2.html" class="project-card">
-        <img src="img/project2.png" alt="Project 2">
-        <h3>Project Title 2</h3>
-      </a>
-      <!-- Agrega más proyectos igual -->
-    </div>
-  </section>
+  <section id="projects" class="projects-section"></section>
 
 </body>
 </html>
