--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <section class="hero">
     <h1 id="name"></h1>
     <p id="role"></p>
+  <!-- HERO -->
     <ul class="button-bar">
       <li><button id="section1" class="seccion"></button></li>
       <li><button id="section2" class="seccion"></button></li>
