working on nav bar (incomplete)

--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
   <section class="hero">
     <h1 id="name"></h1>
     <p id="role"></p>
-  <!-- HERO -->
+  </section>
+
+  <!-- BUTTON BAR -->
+  <nav>
     <ul class="button-bar">
       <li><button id="section1" class="seccion"></button></li>
       <li><button id="section2" class="seccion"></button></li>
       <li><button id="section3" class="seccion"></button></li>
       <li><a href="mailto:pablotorres11001@gmail.com"><button class="seccion" id="section4"></button></a></li>
     </ul>
-  </section>
+  </nav>
+
   
   <!-- PROJECTs -->
   <section id="projects" class="projects-section"></section>
