Back to Portfolio ready

--- a/project-template.html
+++ b/project-template.html
@@ -5,12 +5,12 @@
   <title>Project Details</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav class="button-bar">
+<body class="project">
+  <nav class="return-button">
     <a href="index.html">← Back to Portfolio</a>
   </nav>
 
-  <main id="project-details"></main>
+  <main id="project-content"></main>
 
   <!-- Load the external JS file -->
   <script src="project-details.js"></script>
