Adding text sizes

--- a/project-template.html
+++ b/project-template.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Project Details</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="variables.css">
+  <link rel="stylesheet" href="project-style.css">
 </head>
 <body class="project">
   <nav class="return-button">
