--- a/project-template.html
+++ b/project-template.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Project Details</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="variables.css">
   <link rel="stylesheet" href="project-style.css">
 </head>
