projects moved [Ready!]

--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Project Details</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="variables.css">
+  <link rel="stylesheet" href="../variables.css">
   <link rel="stylesheet" href="project-style.css">
 </head>
 <body class="project">
   <nav class="return-button">
-    <a href="index.html">← Back to Portfolio</a>
+    <a href="../index.html">← Back to Portfolio</a>
   </nav>
 
   <main id="project-content"></main>
