lightbox [working on it]

--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../variables.css">
   <link rel="stylesheet" href="project-style.css">
+  <script type="module" src="project-details.js"></script>
 </head>
 <body class="project">
   <nav class="return-button">
@@ -15,6 +16,5 @@
   <main id="project-content"></main>
 
   <!-- Load the external JS file -->
-  <script src="project-details.js"></script>
 </body>
 </html>
