--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul class="button-bar">
       <li><button id="section1" class="seccion"></button></li>
       <li><button id="section2" class="seccion"></button></li>
-      <li><a href="mailto:pablotorres11001@gmail.com"><button class="seccion" id="section3"></button></a></li>
+      <li><a href="./contact/contact.html"><button id="section3" class="seccion"></button></a></li>
     </ul>
   </nav>
 
