--- a/contact/contact.html
+++ b/contact/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body class="contact-page">
   <nav class="button-bar">
-    <a href="index.html">← Back to Portfolio</a>
+    <a href="../index.html">← Back to Portfolio</a>
   </nav>
 
   <main class="contact-container">
