contact [Working on it]

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -17,6 +17,6 @@
     <div class="contact-items"></div>
   </main>
 
-  <script type="module" src="js/contact.js"></script>
+  <script type="module" src="contact.js"></script>
 </body>
 </html>
