--- a/pages/studies/studies.html
+++ b/pages/studies/studies.html
@@ -9,7 +9,7 @@
 </head>
 <body class="studies-page">
   <nav class="button-bar">
-    <a href="index.html">← Back to Portfolio</a>
+    <a href="../../index.html">← Back to Portfolio</a>
   </nav>
 
   <main class="studies-container">
@@ -17,6 +17,6 @@
     <div class="timeline" id="timeline"></div>
   </main>
 
-  <script type="module" src="js/studies.js"></script>
+  <script type="module" src="studies-main.js"></script>
 </body>
 </html>
