--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="variables.css">
   <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
-  <script type="module">
-    import { Paths } from './config.js';
-    document.write(`<link rel="stylesheet" href="${Paths.css}">`);
-  </script>
 </head>
 <body>
 
@@ -24,12 +20,10 @@
   <nav>
     <ul class="button-bar">
       <li><button id="section1" class="seccion"></button></li>
-      <li><button id="section2" class="seccion"></button></li>
-      <li><a href="./studies.html"><button class="seccion" id="section2">Studies</button></a></li>
+      <li><a href="./pages/studies/studies.html"><button class="seccion" id="section2">Studies</button></a></li>
       <li><a href="./contact/contact.html"><button id="section3" class="seccion"></button></a></li>
     </ul>
   </nav>
-
 
   
   <!-- PROJECTs -->
