Slider [In Progress]

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <script defer src="main.js"></script>
 </head>
 <body>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h1 id="name">Pablo</h1>
+    <p id="role">Software</p>
+  </section>
+
   <nav>
     <button data-target="home">Home</button>
     <button data-target="studies">Studies</button>
