--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 
   <!-- HERO -->
   <section class="hero">
-    <h1 id="name">Pablo</h1>
-    <p id="role">Software</p>
+    <h1 id="name"></h1>
+    <p id="role"></p>
   </section>
 
   <nav>
-    <button data-target="home">Home</button>
-    <button data-target="studies">Studies</button>
-    <button data-target="contact">Contact</button>
+    <ul class="button-bar">
+    <li><button id="section1" class="seccion" data-target="home"></button></li>
+    <li><button id="section2" class="seccion" data-target="studies"></button></li>
+    <li><button id="section3" class="seccion" data-target="contact"></button></li>
   </nav>
 
   <div class="slider">
     <section id="home" class="slide">
-
+    <section id="projects" class="projects-section"></section>
     <p>Home content</p>
     <p>v 1.0.1</p>
 
