First timeline [In Progress]

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./variables.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./pages/contact/contact-style.css">
+  <link rel="stylesheet" href="./pages/studies/studies-style.css">
   <script defer src="main.js"></script>
 </head>
 <body>
@@ -34,7 +35,15 @@
     </section>
     
     <!-- Studies -->    
-    <section id="studies" class="slide">Studies content</section>
+    <section id="studies" class="slide">
+      <h1 class="timeline-title"></h1>
+      <div class="timeline" id="timeline"></div>
+      <div class="study-item" data-icon="🎓">
+        ...
+      </div>
+      <script type="module" src="./pages/studies/studies-main.js"></script>
+
+    </section>
     
     <!-- Contact -->
     <section id="contact" class="slide">
